--- a/any/styles/default.css
+++ b/any/styles/default.css
@@ -2,6 +2,7 @@
     div.full {
         width: auto;
         margin: 0 0.6rem;
+        overflow-wrap: anywhere;
     }
     div.nav {
         width: auto;
